--- a/kls.css
+++ b/kls.css
@@ -3,13 +3,14 @@ body {
     background-size: cover;
     text-align: center;
     color: rgb(228, 255, 255);
-    font-size: 30px;
+    font-size: 25px;
     background-attachment: fixed;
+    background-color: black;
 }
-*{
+* {
     box-sizing: border-box;
 }
-form{
+form {
     height: 500px;
     font-size: 30px;
     display: flex;
@@ -18,25 +19,26 @@ form{
     text-align: start;
     padding: 20px;
 }
-div{
-    padding: 0 20px 0 20px;
+div {
+    padding: 0 10px;
 }
-.box{
+.box {
     text-align: center;
     font-size: 20px;
-    width:100%;
+    width: 100%;
+    min-width: 300px;
     height: 30px;
 }
-.box:hover{
+.box:hover {
     opacity: 0.9;
 }
-.num{
+.num {
     text-align: start;
     font-size: 20px;
-    width:100%;
+    width: 100%;
     height: 30px;
 }
-.btn{
+.btn {
     background: rgb(223, 200, 162);
     border-radius: 7px;
     margin-top: 30px;
@@ -44,7 +46,7 @@ div{
     font-size: 25px;
     cursor: pointer;
 }
-.btn:hover{
+.btn:hover {
     color: azure;
     background-color: rgb(0, 136, 255);
 }
